--- a/index.html
+++ b/index.html
@@ -9,26 +9,26 @@
     <style>
         body {
             background-color: white;
-            color: #4f8f8f; /* Custom green color */
+            color: #099488; /* Custom green color */
             font-family: Arial, sans-serif;
-            display: flex;
+            display: flex;  
             /* justify-content: center; */
             align-items: center;
             flex-direction: column;
-            height: 100vh; /* Full height for centering */
+            height: 100vh; /* Full height for centering */      
             margin: 0;
             direction: rtl;
         }
         .course-category {
             color: black;
             font-size: 24px;
-            font-weight: bold;
+            font-weight: bold;  
             margin: 20px 0;
             text-align: center;
         }
         .course-item {
             background-color: #e0f2f2; /* Light green background */
-            border: 1px solid #4f8f8f; /* Custom green border */
+            border: 1px solid #099488; /* Custom green border */
             border-radius: 5px;
             padding: 10px;
             margin: 10px 0;
@@ -38,7 +38,7 @@
             width: 80%; /* Set a width for the items */
         }
         .copy-button {
-            background-color: #4f8f8f; /* Custom green button */
+            background-color: #099488; /* Custom green button */
             color: white;
             border: none;
             border-radius: 5px;
@@ -74,7 +74,7 @@
         <div class="title">کد دروس کارشناسی علوم کامپیوتر دانشگاه آزاد شیراز</div>
         <div class="detail">برای کپی کردن کد ها کافیه روی کد کلیک کنید</div>
         <div class="detail" style="font-size: 16px;">
-            کد دروس به اتمام نرسیده است و این لیست بصورت مداوم در حال آپدیت هست
+            کد دروس به اتمام نرسیده است و این لیست در حال آپدیت هست
         </div>
         <div class="detail">
             <a href="https://t.me/cyhssin">تهیه شده توسط حسین زارعی</a> |
@@ -86,8 +86,8 @@
     <div class="course-category">درس های اصلی (59 واحد)</div>
     
     <div class="course-item">مبانی علوم ریاضی
-        <button class="copy-button" onclick="copyToClipboard('' , this)">
-            <span class="course-code"></span>
+        <button class="copy-button" onclick="copyToClipboard('6117145323' , this)">
+            <span class="course-code">6117145323</span>
         </button>
     </div>
 
@@ -311,13 +311,13 @@
 
     <div class="course-item">اندیشه 1 
         <button class="copy-button" onclick="copyToClipboard('90610' , this)">
-            <span class="course-code"></span>
+            <span class="course-code">90610</span>
         </button>
     </div>
 
     <div class="course-item">اندیشه 2
         <button class="copy-button" onclick="copyToClipboard('98841' , this)">
-            <span class="course-code"></span>
+            <span class="course-code">98841</span>
         </button>
     </div>
 
@@ -328,14 +328,14 @@
     </div>
 
     <div class="course-item">حقوق اجتماعی و سیاسی
-        <button class="copy-button" onclick="copyToClipboard('' , this)">
-            <span class="course-code"></span>
+        <button class="copy-button" onclick="copyToClipboard('90063' , this)">
+            <span class="course-code">90063</span>
         </button>
     </div>
 
     <div class="course-item">فلسفه اخلاق
-        <button class="copy-button" onclick="copyToClipboard('' , this)">
-            <span class="course-code"></span>
+        <button class="copy-button" onclick="copyToClipboard('98982' , this)">
+            <span class="course-code">98982</span>
         </button>
     </div>
 
@@ -352,8 +352,8 @@
     </div>
 
     <div class="course-item">عرفان عملی اسلامی
-        <button class="copy-button" onclick="copyToClipboard('' , this)">
-            <span class="course-code"></span>
+        <button class="copy-button" onclick="copyToClipboard('98949' , this)">
+            <span class="course-code">98949</span>
         </button>
     </div>
 
@@ -365,7 +365,7 @@
 
     <div class="course-item">آشنایی با قانون اساسی جمهوری اسلامی ایران
         <button class="copy-button" onclick="copyToClipboard('90046' , this)">
-            <span class="course-code"></span>
+            <span class="course-code">90046</span>
         </button>
     </div>
 
@@ -376,8 +376,8 @@
     </div>
 
     <div class="course-item">تاریخ امامت
-        <button class="copy-button" onclick="copyToClipboard('' , this)">
-            <span class="course-code"></span>
+        <button class="copy-button" onclick="copyToClipboard('90121' , this)">
+            <span class="course-code">90121</span>
         </button>
     </div>
 
@@ -388,8 +388,8 @@
     </div>
 
     <div class="course-item">تفسیر موضوعی نهج البلاغه
-        <button class="copy-button" onclick="copyToClipboard('' , this)">
-            <span class="course-code"></span>
+        <button class="copy-button" onclick="copyToClipboard('90313' , this)">
+            <span class="course-code">90313</span>
         </button>
     </div>
 
@@ -527,13 +527,13 @@
 
     <div class="course-item">ریاضی عمومی 1
         <button class="copy-button" onclick="copyToClipboard('6117165140' , this)">
-            <span class="course-code"></span>
+            <span class="course-code">6117165140</span>
         </button>
     </div>
 
     <div class="course-item">ریاضی عمومی 2
-        <button class="copy-button" onclick="copyToClipboard('' , this)">
-            <span class="course-code"></span>
+        <button class="copy-button" onclick="copyToClipboard('6117129896' , this)">
+            <span class="course-code">6117129896</span>
         </button>
     </div>
 
